@@ -1,3 +1,9 @@
+2009-04-13  Andreas K. Foerster  <info@akfoerster.de>
+
+	* akfavatar.h, avatar-audio.c (avt_LoadAU_RW)
+	(avt_load_au_file, avt_load_au_data):
+	new functions
+
 2009-04-11  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar-audio.c (avt_load_raw_audio_data):
